STARCH-1084 review/refactor claims handling, work in progress